fix(NO-JIRA) Fix overflow-y that removed scrolling

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -21,7 +21,7 @@
 body {
 	line-height: 1.5;
 	-webkit-font-smoothing: antialiased;
-	overflow: hidden;
+	overflow-x: hidden;
 }
 
 /*
